apps/heimdall/04_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall
  namespace: heimdall
  labels:
    app.kubernetes.io/name: heimdall
    app.kubernetes.io/version: 2.2.2
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: heimdall
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: heimdall
    spec:
      containers:
      - env:
        - name: TZ
          value: "Europe/Berlin"
        name: heimdall
        image: linuxserver/heimdall:2.2.2-ls82
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 80
            name: http-heimdall
        readinessProbe:
          httpGet:
            path: /manifest.json
            port: http-heimdall
          failureThreshold: 3
          timeoutSeconds: 10
        livenessProbe:
          httpGet:
            path: /manifest.json
            port: http-heimdall
          initialDelaySeconds: 60
          failureThreshold: 5
          timeoutSeconds: 10
        volumeMounts:
          - mountPath: /config
            name: config
        resources:
          requests:
            memory: 105M
          limits:
            memory: 200M
      restartPolicy: Always
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: heimdall-config
