apps/heimdall/05_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: heimdall
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - ankhmorpork.thaum.xyz
    secretName: heimdall-tls
  rules:
  - host: ankhmorpork.thaum.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: heimdall
            port: 
              name: http-heimdall
